# ButtonBoard2023

./: 5431-ButtonBoard.kicad_pcb  5431-ButtonBoard.kicad_pro  ButtonBoard2023.kicad_pcb  ButtonBoard2023.kicad_sch  PTA4543-2010DPB202--3DModel-STEP-269445.STEP  README.md  code.py  fp-info-cache  fp-lib-table  sym-lib-table  titan_gamepad.py
.github/workflows/: cmake.yml
5431-ButtonBoardButBetter/: 5431-ButtonBoardButBetter.kicad_pcb  5431-ButtonBoardButBetter.kicad_prl  5431-ButtonBoardButBetter.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
COM-09032/: COM-09032.kicad_sym  XDCR_COM-09032.kicad_mod
KiCad-RP-Pico-main/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
assets/135413624-27-1-2199298-4/: 1-2199298-4.wrl
assets/COM-09032/: XDCR_COM-09032.kicad_mod
assets/Joystick/: XDCR_COM-09032.kicad_mod
assets/KeyboardSwitch.pretty/: SW_Cherry_MX_1.00u_PCB.kicad_mod
assets/KiCad-RP-Pico-main/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
assets/Linear Pot/: PTA4543-2015DPB103.kicad_sym  TRIM_PTA4543-2015DPB103.kicad_mod
code/: .gitignore  CMakeLists.txt  README.md  boot.py  code.py  main.cpp  mcp3008.h  titan_gamepad.py  usb_descriptors.c
